# Skeleton-Public

./: .gitignore  CMakeLists.txt  README  test_template.h
Skeleton/abyss_bot/: bot.cc  bot.h  npc_builder.cc  npc_builder.h  npc_ship.cc  npc_ship.h  scores.cc  scores.h  spawn_evaluator.cc  spawn_evaluator.h
Skeleton/abyss_bot/csv/: encoded-AbyssNpc_database.csv
Skeleton/db/: db_loader.cc  db_loader.h
Skeleton/eve/: effects.cc  effects.h  eve_math.cc  eve_math.h  ewar_modules.cc  ewar_modules.h  hp_resistances.cc  hp_resistances.h  npc.cc  npc.h  npc_container.cc  npc_container.h  npc_ship.h  player_ship.h  ship.cc  ship.h  ship_weapon.cc  ship_weapon.h  type_converter.cc  type_converter.h
examples/: main_example.cc  new_effects.h  spawns.h
scripts/: line_counter.py
tests/: effect_tests.cc  image_read_test.cc  math_tests.cc
